Added tasks in TODO
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/TODO
+++ b/TODO
@@ -1,3 +1,14 @@
+First release:
+
+- add a python script PushSequenceFile <DataStoreDirectory> <Contigs.fasta>
+- add a python script PushGraphFile <DataStoreDirectory> <kmers.txt>
+- only one nucleotide per vertex for 1-1 vertices
+- colors for nucleotides
+
+Second release:
+
 - zoom
 - user-supplied sequence
 - user-supplied graph
+- Change current sequence file
+- Change current graph file
