Updated user stories
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,9 @@
-Sébastien Boisvert
+Code (Programmers):
+
+- Sébastien Boisvert
+
+User stories (Storytellers):
+
+- Frédéric Raymond
+- Charles Joly-Beauparlant
+- Sébastien Boisvert
