--- a/TODO
+++ b/TODO
@@ -2,8 +2,7 @@ First release:
 
 - add a python script PushSequenceFile <DataStoreDirectory> <Contigs.fasta>
 - add a python script PushGraphFile <DataStoreDirectory> <kmers.txt>
-- only one nucleotide per vertex, full sequence on mouse over
-- colors for nucleotides
+- full sequence on mouse over
 
 Second release:
 
