--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 First release:
 
+- arrows
+- compute physics and draw collisions only for stuff on the screen
 - add a python script PushSequenceFile <DataStoreDirectory> <Contigs.fasta>
 - add a python script PushGraphFile <DataStoreDirectory> <kmers.txt>
 
