--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 First release:
 
+- Arrows to move around
 - use a one-level quad tree for physics
 - compute physics and draw collisions only for stuff on the screen
 - add a python script PushSequenceFile <DataStoreDirectory> <Contigs.fasta>
