--- a/TODO
+++ b/TODO
@@ -1,11 +1,9 @@
-First release:
+- smooth slides
+- zoom
 
 - add a python script PushSequenceFile <DataStoreDirectory> <Contigs.fasta>
 - add a python script PushGraphFile <DataStoreDirectory> <kmers.txt>
 
-Second release:
-
-- zoom
 - user-supplied sequence
 - user-supplied graph
 - Change current sequence file
