--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+- show explicitely repeat k-mers
+- enable the grid 
+
 - add a python script PushSequenceFile <DataStoreDirectory> <Contigs.fasta>
 - add a python script PushGraphFile <DataStoreDirectory> <kmers.txt>
 - user-supplied sequence
