--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
-- show explicitely repeat k-mers
+- show explicitely repeat k-mers (halo)
+- rotate buttons
+- arrow buttons
+- zoom buttons
 
 - add a python script PushSequenceFile <DataStoreDirectory> <Contigs.fasta>
 - add a python script PushGraphFile <DataStoreDirectory> <kmers.txt>
