--- a/server/README
+++ b/server/README
@@ -1,15 +1,10 @@
-The server is in php and it uses a SQL 1999.
+Programs are prefixed by "RayCloudBrowser."
+
+The server is implemented in C++ 1998.
+
 The messaging is done with HTTP (rfc 2616).
 
 Compliant standards:
-
-SQL 1999:
-
-- ISO/IEC 9075-1:1999 Information technology -- Database languages -- SQL -- Part 1: Framework (SQL/Framework)
-- ISO/IEC 9075-2:1999 Information technology -- Database languages -- SQL -- Part 2: Foundation (SQL/Foundation)
-- ISO/IEC 9075-3:1999 Information technology -- Database languages -- SQL -- Part 3: Call-Level Interface (SQL/CLI)
-- ISO/IEC 9075-4:1999 Information technology -- Database languages -- SQL -- Part 4: Persistent Stored Modules (SQL/PSM)
-- ISO/IEC 9075-4:1999 Information technology -- Database languages -- SQL -- Part 4: Persistent Stored Modules (SQL/PSM)
 
 HTTP 1.1:
 
@@ -19,9 +14,5 @@ HTTP 1.1:
 CGI 1.1   The Common Gateway Interface (CGI) Version 1.1
   http://www.ietf.org/rfc/rfc3875
 
-The SQL database server is sqlite.
-
 The messages are passed with the Hyper Text Transfer Protocol (method: GET).
-
-
 
