Added a code name
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 Ray Cloud Browser: interactively skim processed genomics data with energy
+Codename: Shagohod
+Estimated Time of Arrival: Q1 2013
 
 ## Description
 
