--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+- starting point provided by server
+- add message type when talking to server
+- readahead in the server
 - delete off-screen objects
 - move buttons
 - zoom buttons
