Fixed a color bug
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+Holding button should accumulate stuff
+
 1. Change sample (graph file)
 2. Change current sequence file
 3. select where to start (position)
