--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
-- zooming events more smooth
 - display edge if one end is on screen
+- show key pressed
 
 1. Change sample (graph file)
 2. Change current sequence file
