added task suggested by Shaun Jackman
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/TODO
+++ b/TODO
@@ -9,4 +9,6 @@
 
 - delete off-screen objects
 - user can change the minimum coverage to display
-- display edge if one end is on screen
+- display edge if one end is on screenS
+
+-  the click and drag to pan seems too sensitive, at least for me. I often flew off into nowhere and couldn't find my way back to the assembly
