improved the README
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/README
+++ b/README
@@ -1,23 +1,73 @@
 Ray Cloud Browser: interactively skim processed genomics data with energy
+
 Codename: Shagohod
-Estimated Time of Arrival: Q1 2013
-
-## Description
-
-This project is a de Bruijn graph browser in the cloud.
+Product manager: Sébastien Boisvert
+Estimated Time of Arrival: 2013 Q1
+Funding: Canadian Institute of Health Research
+     S.B. is recipient of a doctoral award from the Canadian Institutes of Health Research (200910GSD-226209-172830). 
 
 ## Demo:
 
 http://ec2-54-242-197-219.compute-1.amazonaws.com/~sebhtml/Ray-Cloud-Browser/client/
 
+
+## Motivation
+
+One of the problems with genomics is that you need to deliver large data
+to end users before delivering a user experience for visualization.
+But most clients are not ready for these large data and in some way it
+does not make sense to move large data around.
+
+Ray Cloud Browser is a genome graph browser in the cloud. The purpose is
+to visualize genome assemblies and the main claim is that it will help 
+researchers understanding a growing array of problems (like assembly algorithms).
+
+The basic design is the same that is found in the Ray assembler -- message passing and
+granularity are the two pillars of Ray technologies.
+Although currently limited to assembly graph visualization, the Ray technologies
+and ideas put forward are reusable freely, through products like RayPlatform, Ray Cloud Browser and
+Ray.
+
+For applications of the technology:
+
+Sébastien Boisvert, Frédéric Raymond, Élénie Godzaridis, François Laviolette and Jacques Corbeil.
+Ray Meta: scalable de novo metagenome assembly and profiling.
+Genome Biology (BioMed Central Ltd).
+13:R122, Published: 22 December 2012
+http://dx.doi.org/doi:10.1186/gb-2012-13-12-r122
+
+Sébastien Boisvert, François Laviolette, and Jacques Corbeil.
+Ray: simultaneous assembly of reads from a mix of high-throughput sequencing technologies.
+Journal of Computational Biology (Mary Ann Liebert, Inc. publishers).
+November 2010, 17(11): 1519-1533.
+http://dx.doi.org/doi:10.1089/cmb.2009.0238
+
+
+## Compatibility and requirements
+
+These products can output a file in the Ray Cloud Browser format:
+
+- Ray assembler http://denovoassembler.sourceforge.net/
+- ABySS http://www.bcgsc.ca/platform/bioinfo/software/abyss/
+
+For deployment, a web server is needed and clients must have a modern
+web browser supporting HTML5.
+
+
 ## Official website
+
 	https://github.com/sebhtml/Ray-Cloud-Browser
 
-# Legal notice:
-	All the code is GPLv3, see LICENSE
+
+## Legal notice:
+
+All the code is licensed under the GNU General Public License, version 3, see LICENSE.
 
 The client is a fork of the force-graph project (author: Sébastien Boisvert, license: GPLv3).
   => https://github.com/sebhtml/force-graph
+
+Ray Cloud Browser does not bundle any external library.
+
 
 ## How it works
 
