--- a/TODO
+++ b/TODO
@@ -1,10 +1,5 @@
-1. Change sample (graph file)
-2. Change current sequence file
-3. select where to start (position)
-   see server/README
-
+- select location
 - select part of graph to obtain DNA sequence
-
 - delete off-screen objects
 - user can change the minimum coverage to display
 - display edge if one end is on screenS
