--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
+- implement a integer selection widget
 - select location
 - select part of graph to obtain DNA sequence
 - delete off-screen objects
 - user can change the minimum coverage to display
 - display edge if one end is on screenS
+
+- add the number of vertices
