--- a/TODO
+++ b/TODO
@@ -2,4 +2,4 @@
 - select part of graph to obtain DNA sequence
 - delete off-screen objects
 - user can change the minimum coverage to display
-- display edge if one end is on screenS
+- display edge if one end is on screens
