--- a/README
+++ b/README
@@ -2,6 +2,7 @@ Ray Cloud Browser: interactively skim processed genomics data with energy
 
 Codename: Shagohod
 Product manager: Sébastien Boisvert
+License: GNU General Public License, version 3
 Estimated Time of Arrival: 2013 Q1
 Funding: Canadian Institute of Health Research
      S.B. is recipient of a doctoral award from the Canadian Institutes of Health Research (200910GSD-226209-172830). 
