--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 - select location
+- add buttons to go to minimum and maximum
 - select part of graph to obtain DNA sequence
 - delete off-screen objects
 - user can change the minimum coverage to display
 - display edge if one end is on screens
+
