--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-- select location
+- return {} when there is an error instead of empty content
 - add buttons to go to minimum and maximum
 - select part of graph to obtain DNA sequence
 - delete off-screen objects
