--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
+- don't show any vertices below the minimum
+- blue shadow for contigs
+- path positions in display
 - return {} when there is an error instead of empty content
+
 - add buttons to go to minimum and maximum
 - select part of graph to obtain DNA sequence
 - delete off-screen objects
