--- a/TODO
+++ b/TODO
@@ -1,10 +1,16 @@
-- don't show any vertices below the minimum
+- fetch more path locations
 - path positions in display
+- don't show any vertices below the minimum
+- user can change the minimum coverage to display
+- recenter on new location
+- play region
+
 - return {} when there is an error instead of empty content
 
 - add buttons to go to minimum and maximum
 - select part of graph to obtain DNA sequence
 - delete off-screen objects
-- user can change the minimum coverage to display
 - display edge if one end is on screens
 
+
+- various TODO entries directly in the code
