Changed title of the navigation window
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/TODO
+++ b/TODO
@@ -1,12 +1,13 @@
-
 - push currentVertex in PathOperator upon selection
 - readahead is not good enough (padding is pad)
+- server -- return {} when there is an error instead of empty content
+- server -- return array instead of {} for vertices
+
 - don't show any vertices below the minimum
 - user can change the minimum coverage to display
 
-i- select part of graph to obtain DNA sequence
+- select part of graph to obtain DNA sequence
 - delete off-screen objects
 - display edge if one end is on screens
 
-- server -- return {} when there is an error instead of empty content
-- server -- return array instead of {} for vertices
+
