--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
-- select part of graph to obtain DNA sequence
+- display edge if one end is on screens => contig-10 @ 97
+- show all positions for a vertex => contig-10 @ 227
 - delete off-screen objects
-- display edge if one end is on screens
+- select part of graph to obtain DNA sequence
