--- a/TODO
+++ b/TODO
@@ -1,3 +1,9 @@
+- generalize the index to store these:
+	- coverage
+	- parents
+	- children
+	- path positions
+  
 - display edge if one end is on screens => contig-10 @ 97
 - delete off-screen objects
 - select part of graph to obtain DNA sequence
