--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
-- annotations (see Documentation)
+- annotations (see Documentation)t
 - display edge if one end is on screens => contig-10 @ 97
 - delete off-screen objects
 - select part of graph to obtain DNA sequence
+
+- users (register, log in, log out, forgot password)
+- push data as a user
