(#53) Update authors file

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,4 @@
-## Programmers (alphabetical order):
-
-* Sébastien Boisvert
-** Structures and their relationships
+Élénie Godzaridis
+Jean-François Erdelyi
+Sébastien Boisvert
 
